<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_opacity_80"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:navigationIconTint="@color/white"
            app:title="@string/about_app"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/spacing_extra_largeX"
                android:layout_marginBottom="@dimen/spacing_large"
                android:contentDescription="@string/app_icon"
                android:src="@drawable/icon_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.App.Headline6"
                android:textColor="@color/textColorPrimary" />

            <TextView
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:gravity="center"
                android:text="@string/version_format"
                android:textAppearance="@style/TextAppearance.App.Body2"
                android:textColor="@color/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_extra_large"
                android:gravity="center"
                android:text="@string/app_description"
                android:textAppearance="@style/TextAppearance.App.Body1"
                android:textColor="@color/textColorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_button"
                style="@style/Widget.App.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/share_app"
                app:icon="@drawable/ic_share"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/spacing_small"
                app:iconTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rate_button"
                style="@style/Widget.App.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/rate_app"
                app:icon="@drawable/ic_star"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/spacing_small"
                app:iconTint="@color/weight_color" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>