<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/workout_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_running" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/workout_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercises"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/workout_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="4dp"
                    android:text="@string/minutes"
                    app:drawableStartCompat="@drawable/ic_time" />

                <TextView
                    android:id="@+id/workout_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:text="@string/calories"
                    app:drawableStartCompat="@drawable/ic_calories" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/workout_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</androidx.cardview.widget.CardView>