<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:navigationIconTint="@color/white"
        app:title="@string/add_goal"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_opacity_80"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small">

            <TextView
                android:id="@+id/header_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_extra_largeX"
                android:gravity="center"
                android:text="@string/add_new_goal"
                android:textAppearance="@style/TextAppearance.App.Headline6"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/goal_name_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundColor"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_small"
                app:cardCornerRadius="@dimen/spacing_small"
                app:cardElevation="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_text">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/goal_name_input_layout"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_medium"
                    android:hint="@string/goal_name_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/goal_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Goal Type Card -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/goal_type_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundColor"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_small"
                app:cardCornerRadius="@dimen/spacing_small"
                app:cardElevation="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goal_name_card">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/goal_type_input_layout"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_goal_type"
                    android:padding="@dimen/spacing_medium"
                    app:endIconMode="dropdown_menu"
                    app:startIconDrawable="@drawable/ic_exercise"
                    app:startIconTint="@color/colorPrimaryDark">

                    <AutoCompleteTextView
                        android:id="@+id/goal_type_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:inputType="none"
                        android:labelFor="@id/goal_type_dropdown" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/target_value_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundColor"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_small"
                app:cardCornerRadius="@dimen/spacing_small"
                app:cardElevation="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goal_type_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/spacing_medium">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/target_value_input_layout"
                        style="@style/Widget.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:hint="@string/target_value_hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/target_value_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/current_value_input_layout"
                        style="@style/Widget.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:hint="@string/current_value_hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/target_value_input_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/current_value_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/goal_date_input_layout"
                        style="@style/Widget.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:hint="@string/goal_date_hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/current_value_input_layout"
                        app:startIconDrawable="@drawable/ic_calendar_today"
                        app:startIconTint="@color/colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/goal_date_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_goal_button"
                style="@style/Widget.App.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/spacing_large"
                android:insetLeft="@dimen/spacing_medium"
                android:insetTop="@dimen/spacing_small"
                android:insetRight="@dimen/spacing_medium"
                android:insetBottom="@dimen/spacing_small"
                android:text="@string/save"
                android:textAllCaps="false"
                app:icon="@drawable/ic_save"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/spacing_small"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/target_value_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>